# EchoNet

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: validate.yml
docs/: AETHERNODE_TELEMETRY.md  AI_WITNESS_DATASET_PROTOCOL.md  CLUSTER_AND_SIMULATION_BASELINE.md  CLUSTER_AND_SIMULATION_BASELINE_ADDENDUM.md  COHERENCE_PROPAGATION_ENVELOPE.md  DASHBOARD_MOCK_STREAMS.md  ECHONET_ECHOCHAIN_HANDOFF.md  ECHONET_ROLE.md  EVENT_INGESTION_CONTRACT.md  INGESTION_LIBRARY.md  MEMORY_LAYER_INGESTION.md  NAVIGATOR_TELEMETRY.md  PUBLIC_PRIVATE_BOUNDARY.md  RIVERPATHS_TELEMETRY.md  SOURCE_CROSSWALK.md  THREAD_CONTEXT_RECONCILIATION_2026_07.md  WEBSITE_DEMO_TELEMETRY.md
examples/: aethernode_cluster_event_example.json  ai_witness_dataset_example.json  echonet_echochain_handoff_example.json  memory_layer_ingest_example.json  navigator_route_event_example.json  pilot_request_event.json  riverpaths_demo_session.json  waitlist_signup_event.json  website_conversion_event.json
fixtures/: README.md  manifest.json
fixtures/aethernode/: cluster_anomaly_window.json  single_node_sensor_window.json
fixtures/echochain/: fold_ping_council_handoff.json  signal_ping_handoff.json
schemas/: aethernode_telemetry_event.schema.json  ai_witness_dataset.schema.json  echonet_echochain_handoff.schema.json  echonet_event.schema.json  memory_ingest_event.schema.json  navigator_telemetry_event.schema.json
scripts/: validate_examples.py
src/echonet/: __init__.py  cli.py  schemas.py  (+2 more)
tests/: test_fixture_catalog.py  test_ingestion_library.py  test_schema_examples.py
(+5 files in other folders)
