[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echonet"
version = "0.1.0"
description = "EchoNet contract validation and minimal ingestion helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23.0",
  "referencing>=0.35.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4"
]

[project.scripts]
echonet = "echonet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
